# authentication

./: .env.example  Cargo.toml  README.md  input.css
assets/: style.css  tailwind.css
dockerfiles/: prod.dockerfile
migrations/2025-05-11-110217_create_users/: up.sql
src/: main.rs  schema.rs
src/components/forms/: mod.rs
src/components/layouts/: footer.rs  mod.rs
src/database/models/: mod.rs  user.rs
src/helpers/: hash.rs  mod.rs
src/locales/: en.ftl  fr.ftl
src/models/: user.rs
src/views/: authentication.rs  mod.rs
